--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "uuid": "5dbc738b-6a52-4a78-a46c-eed70aa61c15"
   },
   "engines": {
-    "node": ">=16.13.0",
+    "node": "16.13.0",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
