--- a/render.yaml
+++ b/render.yaml
@@ -6,10 +6,10 @@ services:
     buildCommand: yarn install && yarn build
     startCommand: yarn start
     healthCheckPath: /_health
-    autoDeploy: false
+    autoDeploy: true
     envVars:
       - key: NODE_VERSION
-        value: 16.13.0
+        value: 16.19.0
       - key: NODE_ENV
         value: production
       - key: CLOUDINARY_NAME
